pdflatex läuft jetzt auch durch.
  - Beim build-Prozess muss noch nachgearbeitet werden .

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -10,6 +10,7 @@
 
 \usepackage{booktabs}
 \usepackage{longtable}
+\usepackage{array}
 
 \usepackage{cmbright}
 
@@ -18,7 +19,7 @@
 
 \begin{document}
 
-\input{latex/latex1.tex}
+\input{latex/klasse-07}
 
 
 \end{document}
