--- a/curriculum.tex
+++ b/curriculum.tex
@@ -1,5 +1,12 @@
 \documentclass[11pt]{article}
 
+%% font setup for latex:
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+
+\usepackage[ngerman]{babel}
+
+
 \usepackage{geometry}
 \geometry{%
 	landscape,%
@@ -8,16 +15,27 @@
 	bottom=20mm
 }
 
+\parindent=0pt
+
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{array}
 
 \usepackage{cmbright}
 
+%% hyperlinks:
+\usepackage{hyperref}% load hyperref last.
 
-\title{A longtable example}
+
+
+\title{Schulcurriculum Gess ab 2025}
 
 \begin{document}
+
+% Titlepage:
+%{\LARGE\textbf{Vokabellisten}} % change title here!
+%\tableofcontents
+%\clearpage
 
 \input{latex/klasse-07}
 
