Calling Card für das automatische Einbinden von ods-Dateien

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -37,7 +37,8 @@
 %\tableofcontents
 %\clearpage
 
-\input{latex/klasse-07}
+% Insert the callingcard here:
+\input{build/callingcard.tex}
 
 
 \end{document}
