--- a/curriculum.tex
+++ b/curriculum.tex
@@ -5,6 +5,9 @@
 \usepackage[T1]{fontenc}
 
 \usepackage[ngerman]{babel}
+\hyphenpenalty=12 % Default is 50
+
+\usepackage{ragged2e}
 
 
 \usepackage{geometry}
