--- a/curriculum.tex
+++ b/curriculum.tex
@@ -66,7 +66,7 @@
 
 
 % Depth of toc:
-\setcounter{tocdepth}{2}% go to level 2.
+\setcounter{tocdepth}{3}% go to level 3 for subsections.
 
 
 % Appearance in toc
@@ -78,7 +78,7 @@
     {\hspace*{0em}}% before w/o label
     % After the label there will be a filler and the page number:
     % \makebox[2cm]{\dotfill} creates a filler of length 2cm  
-    {\makebox[2cm]{\dotfill}\upshape\thecontentspage}%
+    {\makebox[3cm]{\dotfill}\upshape\thecontentspage}%
     []% after
 
 
