Moved header to ''lib/header.tex''
  - Die Datei ''lib/header.tex'' ist optional. Wenn sie existiert, wird sie eingelesen.

--- a/excel2pdf.tex
+++ b/excel2pdf.tex
@@ -111,9 +111,9 @@
 \begin{document}
 
 
-\IfFileExists{./input/myheader.tex}{
+\IfFileExists{./lib/header.tex}{
     % Input file may include ''\tableofcontents'':
-    \input{./input/myheader.tex}
+    \input{./lib/header.tex}
 }{
     % No action if file not found
 }
